Bug #19452
/osd/OSDMap.h: 507: FAILED assert(is_up(osd))
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
#0 0x00007f217b6341d7 in raise () from /lib64/libc.so.6 #1 0x00007f217b6358c8 in abort () from /lib64/libc.so.6 #2 0x00007f216ad641b4 in ceph::__ceph_assert_fail (assertion=assertion@entry=0x7f21736f2f3b "is_up(osd)", file=file@entry=0x7f21736ef1b8 "/mnt/jenkins/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.0.0-2093-g4c73d84/rpm/el7/BUILD/ceph-12.0.0-2093-g4c73d84/s"..., line=line@entry=507, func=func@entry=0x7f21736f78a0 "entity_inst_t OSDMap::get_inst(int) const") at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/common/assert.cc:77 #3 0x00007f2173638406 in OSDMap::get_inst (osd=3, this=<optimized out>) at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/osd/OSDMap.h:507 #4 0x00007f21736b2805 in get_inst (osd=3, this=<optimized out>) at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/osdc/Objecter.h:1754 #5 Objecter::_get_session (this=this@entry=0x7f2160114f40, osd=3, session=session@entry=0x7f214fffdfe8, sul=...) at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/osdc/Objecter.cc:1717 #6 0x00007f21736b3d79 in Objecter::_assign_command_session (this=this@entry=0x7f2160114f40, c=c@entry=0x7f21601631d0, sul=...) at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/osdc/Objecter.cc:4773 #7 0x00007f21736c8d14 in Objecter::handle_osd_map (this=this@entry=0x7f2160114f40, m=m@entry=0x7f2148003530) at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/osdc/Objecter.cc:1334 #8 0x00007f21736ca007 in Objecter::ms_dispatch (this=0x7f2160114f40, m=0x7f2148003530) at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/osdc/Objecter.cc:1006 #9 0x00007f216adc79f2 in ms_deliver_dispatch (m=0x7f2148003530, this=0x7f2160087f50) at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/msg/Messenger.h:602 #10 DispatchQueue::entry (this=0x7f21600880a0) at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/msg/DispatchQueue.cc:197 #11 0x00007f216ae5a96d in DispatchQueue::DispatchThread::entry (this=<optimized out>) at /usr/src/debug/ceph-12.0.0-2093-g4c73d84/src/msg/DispatchQueue.h:102 #12 0x00007f217c0d0dc5 in start_thread () from /lib64/libpthread.so.0 #13 0x00007f217b6f673d in clone () from /lib64/libc.so.6
/a/sage-2017-04-01_15:18:56-rados-wip-sage-testing---basic-smithi/976311
History
#1 Updated by Sage Weil almost 6 years ago
#2 Updated by Sage Weil almost 6 years ago
- Status changed from Fix Under Review to Resolved