osdc/Objecter: do not set up a session if there is no valid command target

Fixes: http://tracker.ceph.com/issues/19452
Signed-off-by: Sage Weil <sage@redhat.com>